--- a/styles/style.css
+++ b/styles/style.css
@@ -86,3 +86,27 @@ nav > ul {
   z-index: 100;
   font-size: 2rem;
 }
+
+.features {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem;
+}
+.features > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  text-align: center;
+  height: 300px;
+}
+
+.features img {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+}
