--- a/styles/style.css
+++ b/styles/style.css
@@ -18,16 +18,25 @@ White: #FFF
 }
 
 body {
+  padding-top: 80px;
   line-height: 1.5;
   font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
+
 }
 
 nav {
+  position: fixed;
+  top: 0;
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 1.5rem 3rem;
+  width: 100%;
+  z-index: 101
+
 }
 
 nav > img {
@@ -44,10 +53,12 @@ nav > ul {
 }
 
 .main-image {
+
   position: relative;
   max-width: 100%;
   margin: 0 auto;
   height: auto;
+  z-index: 100;
 }
 
 .main-image img {
@@ -69,7 +80,6 @@ nav > ul {
   align-items: center;
   gap: 1rem;
   padding: 4rem;
-
 }
 .main-image h1 {
   color: #fff;
@@ -92,11 +102,11 @@ nav > ul {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  padding: 2rem;
-}
-.features > div {
-  display: flex;
+  padding: 4rem 2rem;
   flex-direction: column;
+}
+.features-card {
+  display: flex;
   justify-content: center;
   align-items: center;
   gap: 1rem;
@@ -105,8 +115,56 @@ nav > ul {
   height: 300px;
 }
 
+.features h3 {
+  font-size: 2rem;
+  text-align: center;
+}
 .features img {
   width: 100%;
   height: auto;
   max-height: 200px;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1rem;
+  background-color: #00b172;
+  color: #fff;
+  padding: 4rem;
+}
+
+.white-icon {
+  height: 100px;
+  width: 100px;
+}
+
+.app {
+  height: 600px;
+  width: auto;
+}
+
+.footer-text {
+  display: flex;
+  flex-direction: column;
+
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.footer-text > div {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 250px;
+}
+
+.footer-text h3 {
+  font-size: 1.6rem;
+  border-bottom: 2px solid #fff;
+}
+
+strong {
+  font-size: 1.6rem;
 }
